RESOLVED FIXED156373
We incorrectly parse arrow function expressions
https://bugs.webkit.org/show_bug.cgi?id=156373
Summary We incorrectly parse arrow function expressions
Saam Barati
Reported 2016-04-07 15:45:29 PDT
i.e, we don't parse: ```let x = true ? (y)=>y : (y)=>y```
Attachments
patch (12.37 KB, patch)
2016-04-08 14:09 PDT, Saam Barati
mark.lam: review+
Saam Barati
Comment 1 2016-04-08 14:09:20 PDT
Mark Lam
Comment 2 2016-04-08 14:14:01 PDT
Comment on attachment 276040 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=276040&action=review r=me > Source/JavaScriptCore/ChangeLog:13 > + have a valid ending as long as their body as a valid typo:/as/has/
Saam Barati
Comment 3 2016-04-12 08:22:09 PDT
Note You need to log in before you can comment on or make changes to this bug.